[package]
name = "poe_query"
version = "0.1.6"
authors = ["Daniel <daniel@timeloop.se>"]
edition = "2021"

[dependencies]
poe_bundle = "0.1.4"
log = "0.4.11"
simplelog = "0.8.0"
clap = { version = "4.0", features = ["derive"] }

pest = "2.1.3"
pest_derive = "2.1.0"
apollo-parser = "0.3.1"

byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
