[package]
name = "poe_query"
version = "0.1.17"
authors = ["Daniel <daniel@timeloop.se>"]
edition = "2021"

[[bin]]
name = "poe_query"
path = "src/main.rs"

[lib]
name = "poe_query_lib"
path = "src/lib.rs"

[dependencies]
poe_bundle = "0.1.5"
log = "0.4.11"
simplelog = "0.12.0"
clap = { version = "4.0", features = ["derive"] }

pest = "2.4"
pest_derive = "2.1.0"
apollo-parser = "0.3.1"

byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
